# librar

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  ~$README.md
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
librar/: __init__.py
src/librar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/automation/: test_integration.py  test_watcher.py
tests/bot/: test_bot_main.py  test_commands_handlers.py  test_inline_and_callbacks.py  test_renderers.py  test_search_service.py  test_settings_handler.py  test_settings_repository.py  test_upload.py  test_upload_stage_messages.py
tests/hybrid/: test_filters.py  test_hybrid_integration.py  test_hybrid_query.py  test_query.py  test_scoring.py  test_search_hybrid_cli.py
tests/ingestion/: test_canonical_schema.py  test_chunking.py  test_dedupe.py  test_epub_adapter.py  test_fb2_adapter.py  test_ingestion_pipeline.py  test_language_detection.py  test_ocr.py  test_pdf_adapter.py  test_txt_adapter.py
tests/search/: test_indexer.py  test_morph_smoke.py  test_multilingual_normalize.py  test_normalize.py  test_prerev_normalization.py  test_query.py  test_query_v2.py  test_schema.py  test_schema_v2.py  test_search_cli.py
tests/semantic/: test_config.py  test_openrouter.py  test_rag_prompt.py  test_search_semantic_cli.py  test_semantic_indexer.py  test_semantic_performance.py  test_semantic_query.py  test_semantic_repository.py  test_vector_store.py
tests/taxonomy/: test_classifier.py
(+64 files in other folders)
