[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "librar"
version = "0.1.0"
description = "Local-first book ingestion and search foundations"
requires-python = ">=3.11"
dependencies = [
    "pymupdf==1.26.7",
    "EbookLib==0.20",
    "lxml==6.0.2",
    "beautifulsoup4==4.14.3",
    "charset-normalizer==3.4.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
